# fastllm

./: .gitignore  .gitmodules  CMakeLists.txt
example/benchmark/: benchmark.cpp
include/: fastllm.h
include/devices/cpu/: cputhreadpool.h
include/devices/cuda/: fastllm-cuda.cuh
include/devices/opencl/: opencl_allocator.h  opencl_runtime.h  opencldevice.h
include/utils/: utils.h
src/: executor.cpp  fastllm.cpp
src/devices/cpu/: cpudevice.cpp
src/devices/cuda/: fastllm-cuda.cu
src/devices/opencl/: opencl_allocator.cpp  opencl_runtime.cpp  opencldevice.cpp
src/devices/opencl/cl/: gemv.cl  opencl_codegen.py  opencl_program.cpp
src/models/: chatglm.cpp  moss.cpp
test/bangwen/: CMakeLists.txt  gemv_benchmark.cpp  gemv_opencl.cpp  linear.cl  mace_arena.h
